--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "flavien",
-    "repositoryName": "flavien.github.io",
+    "repositoryName": "flavienliger.github.io",
     "branch": "master"
   },
   "theme": {
