--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "username": "flavien",
+    "username": "flavienliger",
     "repositoryName": "flavienliger.github.io",
     "branch": "master"
   },
